@@ -2,8 +2,7 @@
 export BASE_PATH=/app/apple
 export APPLICATION="apple"
 export APPLICATION_JAR="${APPLICATION}-0.0.1-SNAPSHOT.jar"
-export LOG_PATH="${BASE_PATH}/log"
 
-export JAVA_OPT="-server -Xms256m -Xmx256m -Xmn512m -XX:MetaspaceSize=64m -XX:MaxMetaspaceSize=256m -XX:-OmitStackTraceInFastThrow"
+export JAVA_OPT="-server -XX:+HeapDumpOnOutOfMemoryError -XX:+ExitOnOutOfMemoryError -XX:+AggressiveOpts -XX:+UseG1GC -XX:NewRatio=3 -verbose:gc -XX:+PrintGCCause -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -Djava.net.preferIPv4Stack=true -XX:MaxDirectMemorySize=128M & >> ${APP_HOME}/log/${APP_NAME}.out 2>&1
 
-nohup java ${JAVA_OPT} -jar ${BASE_PATH}/boot/${APPLICATION_JAR} --spring.config.location=${CONFIG_DIR} > ${LOG_PATH} 2>&1 &
+nohup java ${JAVA_OPT} -jar ${BASE_PATH}/boot/${APPLICATION_JAR} --spring.config.location=${CONFIG_DIR} & >> ${BASE_PATH}/log/${APPLICATION}.out 2>&1
